# e2e-typesafe

./: README.md
grpc/be/: Cargo.toml  README.md  build.rs
grpc/be/proto/: greeting.proto
grpc/be/src/: client.rs  main.rs
grpc/fe/: .gitignore  README.md  bun.lockb  package.json
grpc/fe/src/: App.tsx
open-api/be/: README.md  gen_schema.py  gen_schema.sh  main.py  pyproject.toml
open-api/fe/: README.md  bun.lockb  package.json
open-api/fe/src/: App.tsx
trpc/be/: README.md  bun.lockb  index.ts  package.json
trpc/fe/: .gitignore  README.md  bun.lockb  package.json
trpc/fe/src/: App.tsx  trpc.ts
