[tool.poetry]
name = "openapitest"
version = "1.0.0"
description = ""
authors = ["Håkon Østerbø <hauk88@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
